Make `mla` endnotes format the default
Using `\printendnotes` alone will produce the correct format

--- a/mla-example.tex
+++ b/mla-example.tex
@@ -52,7 +52,7 @@ As one may notice, the above subsection used an endnote.
 These can simply be cited with
 ``Yada yada text\textbackslash{}endnote\{more info\ldots\}.''
 Endnotes can be easily printed in correct format by calling
-``\textbackslash{}printendnotes[mla]'' within the
+``\textbackslash{}printendnotes'' within the
 ``notes'' environment.
 
 \section{Using bibliographies}
@@ -73,7 +73,7 @@ already prints one.)
 
 \begin{notes}
 
-\printendnotes[mla]
+\printendnotes
 
 \end{notes}
 
