Correctly format `enumerate` and `itemize` lists
This has been a top-priority to-do, but I only recently
discovered the `enumitem` package.  RIP

--- a/mla-example.tex
+++ b/mla-example.tex
@@ -46,6 +46,25 @@ Alongside regular top-level sections, one can use
 ``\textbackslash{}subsection'' commands too\endnote{Section commands
 in ``mla.cls'' work identical to those of the ``article'' class.}.
 
+\section{Lists}
+
+Vertical lists are a rarity in MLA format, but if one so pleases,
+they can be used.
+The ``itemize'', ``enumerate'' and ``description'' lists
+work just as expected, even with sublists.
+
+\begin{itemize}
+\item A bogus item
+\item Lorem ipsum dolor sit amet.  This item has a bunch of text
+	just so it covers more than one line in the paper and shows
+	proper indentation.
+\item Last item!
+\begin{enumerate}
+\item Just kidding; there's a subitem.  And it's a number!
+\end{enumerate}
+\item Okay, now it's the last item.
+\end{itemize}
+
 \section{Using endnotes}
 
 As one may notice, the above subsection used an endnote.
