Enable backrefs on endnotes
In other words, the endnote links back to where it was made
in the PDF

--- a/mla.dtx
+++ b/mla.dtx
@@ -722,7 +722,7 @@
     format = \normalsize\normalfont,
     list-type = mlanotes
 }
-\setenotez{list-name={},list-style=mla}
+\setenotez{list-name={},list-style=mla,backref}
 %    \end{macrocode}
 %
 % \subsubsection{Bibliography}
