Correct trivial typo in docs

--- a/mla.dtx
+++ b/mla.dtx
@@ -379,7 +379,7 @@
 % To compensate, line spacing is set to \emph{just enough}:
 %
 % \changes{v0.4}{2019/05/08}{Changed \cs{linespacing} to
-%	prints 24 lines per page}
+%	print 24 lines per page}
 %    \begin{macrocode}
 \linespread{1.905}
 %    \end{macrocode}
