--- a/mla.dtx
+++ b/mla.dtx
@@ -134,7 +134,7 @@
 %
 % \fi
 %
-% \CheckSum{231}
+% \CheckSum{230}
 %
 % \CharacterTable
 %  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -677,12 +677,11 @@
 % The main content; the body.
 % This environment produces the \ac{MLA} header at the top.
 %
+% \changes{v0.5}{2019/05/18}{Removed \cs{newpage}}
 %    \begin{macrocode}
 \newenvironment{paper}{%
     \makemlaheader
-}{%
-    \newpage
-}
+}{}
 %    \end{macrocode}
 % \end{environment}
 %
@@ -702,15 +701,15 @@
 % \changes{v0.4}{2019/05/12}{Changed default endnotes format
 %	to \Dlst{mla}}
 % \changes{v0.4}{2019/05/12}{Removed extra \cs{vspace}}
+% \changes{v0.5}{2019/05/18}{Moved \cs{newpage} to beginning of environment}
 %    \begin{macrocode}
 \newenvironment{notes}{%
+    \newpage
     \begin{noindent}
         \pdfbookmark[0]{Notes}{notes}
         \begin{center}Notes\end{center}
     \end{noindent}
-}{%
-    \newpage
-}
+}{}
 %    \end{macrocode}
 % \end{environment}
 %
@@ -751,16 +750,16 @@
 %
 % \changes{v0.2}{2019/04/28}{Countered unexplained vertical space
 %	after heading}
+% \changes{v0.5}{2019/05/18}{Moved \cs{newpage} to beginning of environment}
 %    \begin{macrocode}
 \newenvironment{workscited}{%
+    \newpage
     \begin{noindent}
         \pdfbookmark[0]{Works Cited}{workscited}
         \begin{center}Works Cited\end{center}
     \end{noindent}
     \vspace{-16pt} % XXX to counter unexplained space
-}{%
-    \newpage
-}
+}{}
 %    \end{macrocode}
 % \end{environment}
 %
