Correct weird footnote problem in docs
A footnote went over two pages and made the entire next page
one huge hyperlink for some reason.
As of this version, there's an orphan line on page 5 thanks
to that, but I guess that's better than the huge link.

--- a/mla.dtx
+++ b/mla.dtx
@@ -101,6 +101,9 @@
 %% Reset footnotes per page
 \usepackage[perpage]{footmisc}
 
+%% Keep footnotes from breaking across pages
+\interfootnotelinepenalty=10000
+
 %% Technical info
 \def\myemail{ssterling@firemail.cc}
 
