Fix incorrect syntax for TeX primitives
Was `\length val` instead of `\length=val`

--- a/mla.dtx
+++ b/mla.dtx
@@ -420,8 +420,8 @@
 % for pretty typesetting.
 %
 %    \begin{macrocode}
-\hyphenpenalty 10000
-\pretolerance 10000
+\hyphenpenalty=10000
+\pretolerance=10000
 %    \end{macrocode}
 %
 % \subsection{Paragraphing}
@@ -441,9 +441,9 @@
 % orphans and widows are explicitly allowed.
 %
 %    \begin{macrocode}
-\widowpenalty 0
-\clubpenalty 0
-\interlinepenalty 0
+\widowpenalty=0
+\clubpenalty=0
+\interlinepenalty=0
 %    \end{macrocode}
 %
 % For a final heinous crime against typesetting,
