Add changelog to Table of Contents

--- a/mla.dtx
+++ b/mla.dtx
@@ -108,8 +108,7 @@
 \def\myemail{ssterling@firemail.cc}
 
 %% For the sake of consistency, I guess
-\GlossaryPrologue{\pdfbookmark[0]{Change history}{ch}
-	\section*{Change history}}
+\GlossaryPrologue{\section{Change history}}
 
 %% Everything just looks better, in my opinion
 \usepackage{microtype}
