Add support for figures, tables and captions
The `figure`, `table` and `caption` environments can now be used
as they normally would be -- with proper formatting and all that jazz.

I don't think y'all understand how long this took me to figure out

--- a/mla-example.bib
+++ b/mla-example.bib
@@ -7,3 +7,13 @@
     howpublished = {Web},
     urldate = {2019-04-21}
 }
+
+@online{price2018,
+    author = {Seth Price},
+    title = {Spruce Knob Overlook},
+    publisher = {Instagram},
+    date = {2018-07-20},
+    howpublished = {Web},
+    url = {https://www.instagram.com/p/Bleocv-hknc/},
+    urldate = {2019-05-29}
+}
