--- a/mla-example.tex
+++ b/mla-example.tex
@@ -65,6 +65,20 @@ work just as expected, even with sublists.
 \item Okay, now it's the last item.
 \end{itemize}
 
+\section{Figures}
+
+On rare occasions, you might have to use figures or tables
+in your paper.
+Good news is the ``figure'' and ``table'' environments
+work exactly as expected!
+Just make sure to use ``\textbackslash{}begin\{figure\}[H]''
+if you want the image to stay exactly where you put it.
+\begin{figure}[H]
+\includegraphics[width=0.5\linewidth]{mla-example-image}
+\caption{A scene from atop Spruce Knob, West Virginia}
+\end{figure}
+And yes, I shamelessly used my own image.
+
 \section{Using endnotes}
 
 As one may notice, the above subsection used an endnote.
