Add August to `\mladate` macro
I forgot a whole-ass month y'all

--- a/mla.dtx
+++ b/mla.dtx
@@ -137,7 +137,7 @@
 %
 % \fi
 %
-% \CheckSum{285}
+% \CheckSum{286}
 %
 % \CharacterTable
 %  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -214,6 +214,7 @@
 % (see section~\ref{sec:the_header}).
 %
 % \changes{v0.2}{2019/05/02}{Added macro}
+% \changes{v0.7}{2019/08/30}{Added August to month list}
 %    \begin{macrocode}
 \newcommand{\mladate}{%
     \the\day\ 
@@ -225,6 +226,7 @@
         \or May
         \or June
         \or July
+	\or August
         \or September
         \or October
         \or November
